--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Introduction to Multilevel Modelling</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Patricio Troncoso &amp; Ana Morales-Gómez The University of Glasgow University of Sheffield Scottish Centre for Administrative Data Research (SCADR)" />
+    <meta name="author" content="Patricio Troncoso &amp; Ana Morales-Gómez University of Glasgow University of Sheffield Scottish Centre for Administrative Data Research (SCADR)" />
     <script src="index_files/header-attrs-2.20/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -18,7 +18,7 @@ class: center, middle, inverse, title-slide
 ## <span style="font-size: 80%;">SGSSS Summer School 2023</span>
 ]
 .author[
-### Patricio Troncoso &amp; Ana Morales-Gómez<br><span style="font-size: 60%;">The University of Glasgow<br>University of Sheffield<br>Scottish Centre for Administrative Data Research (SCADR)</span>
+### Patricio Troncoso &amp; Ana Morales-Gómez<br><span style="font-size: 60%;">University of Glasgow<br>University of Sheffield<br>Scottish Centre for Administrative Data Research (SCADR)</span>
 ]
 
 ---
@@ -40,7 +40,7 @@ class: left, middle, inverse
 ]
 &lt;img src="https://www.scadr.ac.uk/sites/default/files/styles/people_profiles_pic/public/Patricio%20Troncoso%2C%202nd%20edit.jpg?itok=tV4ciTAz" width="25%" style="display: block; margin: auto;" /&gt;
 
-- Research Fellow, I-SPHERE, Heriot-Watt University
+- Research Fellow, Urban Studies, University of Glasgow
 
 - Works (mostly) in Educational research
 
@@ -57,7 +57,7 @@ class: left, middle, inverse
 &lt;img src="https://pbs.twimg.com/profile_images/1326811878752997376/7dvI51qy_400x400.jpg" width="30%" style="display: block; margin: auto;" /&gt;
 
 
-- Lecturer in Criminology, The University of Sheffield 
+- Lecturer in Criminology, University of Sheffield 
 
 - Works (mostly) in Criminological research
 
@@ -67,7 +67,7 @@ class: left, middle, inverse
 ]
 
 &lt;br&gt;
-We both work in the Scottish Centre for Administrative Data Research (SCADR). Find out more [here](https://www.scadr.ac.uk/)
+We are both affiliated to the Scottish Centre for Administrative Data Research [(SCADR)](https://www.scadr.ac.uk/)
 ---
 
 ## Today's programme
