--- a/index.html
+++ b/index.html
@@ -220,12 +220,6 @@ This is what we typically call "the line of best fit", because it reduces the er
 
 In the presence of an association between two variables, we can fit a straight line to define the relationship
 
-
-```
-## Warning: Using `size` aesthetic for lines was deprecated in ggplot2 3.4.0.
-## ℹ Please use `linewidth` instead.
-```
-
 &lt;img src="index_files/figure-html/unnamed-chunk-7-1.png" width="45%" style="display: block; margin: auto;" /&gt;
 
 --
@@ -1902,7 +1896,7 @@ class: middle
 
 &lt;img src="https://raw.githubusercontent.com/patroncos/Summer_School_June22/main/images/randslop2.PNG" width="70%" style="display: block; margin: auto;" /&gt;
 
-- Suppose this is relationship between attainment at 16 ($y$) and attainment on entry to the school ($x$).
+- Suppose this is relationship between attainment at 16 `\((y)\)` and attainment on entry to the school `\((x)\)`.
 
 
 - Across range of `\(x\)`, school 1 is more effective than school 2.
@@ -1914,7 +1908,7 @@ class: middle
 
 .pull-right[
 
-- But difference between the two schools widens as x increases.
+- But difference between the two schools widens as `\(x\)` increases.
 
 - So choice of school is particularly important among children with high prior attainment.
 
