commit last chages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <title>Introduction to Multilevel Modelling</title>
     <meta charset="utf-8" />
-    <meta name="author" content="Patricio Troncoso &amp; Ana Morales-Gómez University of Glasgow University of Sheffield Scottish Centre for Administrative Data Research (SCADR)" />
+    <meta name="author" content="Patricio Troncoso &amp; Ana Morales-Gómez University of Edinburgh University of Sheffield Scottish Centre for Administrative Data Research (SCADR)" />
     <script src="index_files/header-attrs-2.20/header-attrs.js"></script>
     <link rel="stylesheet" href="xaringan-themer.css" type="text/css" />
   </head>
@@ -15,10 +15,10 @@ class: center, middle, inverse, title-slide
 # <span style="font-size: 85%; color: white">Introduction to Multilevel Modelling</span>
 ]
 .subtitle[
-## <span style="font-size: 80%;">SGSSS Summer School 2023</span>
+## <span style="font-size: 80%;">SGSSS Summer School 2024</span>
 ]
 .author[
-### Patricio Troncoso &amp; Ana Morales-Gómez<br><span style="font-size: 60%;">University of Glasgow<br>University of Sheffield<br>Scottish Centre for Administrative Data Research (SCADR)</span>
+### Patricio Troncoso &amp; Ana Morales-Gómez<br><span style="font-size: 60%;">University of Edinburgh<br>University of Sheffield<br>Scottish Centre for Administrative Data Research (SCADR)</span>
 ]
 
 ---
@@ -40,13 +40,13 @@ class: left, middle, inverse
 ]
 &lt;img src="https://www.scadr.ac.uk/sites/default/files/styles/people_profiles_pic/public/Patricio%20Troncoso%2C%202nd%20edit.jpg?itok=tV4ciTAz" width="25%" style="display: block; margin: auto;" /&gt;
 
-- Research Fellow, Urban Studies, University of Glasgow
+- Lecturer in Youth Studies, The University of Edinburgh
 
 - Works (mostly) in Educational research
 
-- Twitter: [@ptronc](https://twitter.com/ptronc)
+- Twitter: [@p_tronc](https://twitter.com/ptronc)
 
-- Email: [Patricio.Troncoso@glasgow.ac.uk](mailto:Patricio.Troncoso@glasgow.ac.uk)
+- Email: [Patricio.Troncoso@ed.ac.uk](mailto:Patricio.Troncoso@ed.ac.uk)
 
 ]
 
@@ -76,15 +76,16 @@ We are both affiliated to the Scottish Centre for Administrative Data Research [
   
 - 10:00-10:30 - A brief overview of linear regression
 - 10:30-11:00 - Multilevel data structures and examples
-- 11:00-11:15 - Break
-- 11:15-11:45 - Variance components and group-specific estimates
-- 11:45-12:30 - Practical 1
-- 12:30-13:30 - Lunch 
-- 13:30-13:50 - Accounting for individual and group characteristics: fixed effects
+- 11:10-11:30 - Variance components and group-specific estimates
+- 11:30-12:00 - Break
+- 12:00-12:30 - Practical 1
+- 12:30-13:00 - Accounting for individual and group
+- 13:00-14:00 - Lunch 
+characteristics: fixed effects
 - 14:00-14:30 - Practical 2
 - 14:30-15:00 - Multilevel modelling for binary responses
-- 15:00-15:45 - Practical 3
-- 15:45-16:00 - Break 
+- 15:00-15:30 - Practical 3
+- 15:30-16:00 - Break 
 - 16:00-16:20 - Differential processes between groups: random effects
 - 16:20-16:50 - Practical 4
 - 16:50-17:00 - Wrap up and Finish
