--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ class: left, middle, inverse
 
 - Works (mostly) in Educational research
 
-- Twitter: [@p_tronc](https://twitter.com/ptronc)
+- Twitter: [@p_tronc](https://x.com/p_tronc)
 
 - Email: [Patricio.Troncoso@ed.ac.uk](mailto:Patricio.Troncoso@ed.ac.uk)
 
